[gd_scene load_steps=7 format=2]

[ext_resource path="res://toolboxes/icons/eraser.png" type="Texture" id=1]
[ext_resource path="res://toolboxes/icons/pencil.png" type="Texture" id=2]
[ext_resource path="res://toolboxes/icons/wrench.png" type="Texture" id=3]
[ext_resource path="res://toolboxes/icons/grid.png" type="Texture" id=4]
[ext_resource path="res://toolboxes/scripts/TileMap.gd" type="Script" id=5]
[ext_resource path="res://toolboxes/icons/bucket_fill.png" type="Texture" id=6]





[node name="ToolBox" type="VSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
dragger_visibility = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tools" type="HSplitContainer" parent="."]
margin_right = 1024.0
margin_bottom = 40.0
dragger_visibility = 1

[node name="LeftTools" type="HBoxContainer" parent="Tools"]
margin_right = 188.0
margin_bottom = 40.0

[node name="Pencil" type="ToolButton" parent="Tools/LeftTools"]
margin_right = 44.0
margin_bottom = 40.0
icon = ExtResource( 2 )

[node name="Wrench" type="ToolButton" parent="Tools/LeftTools"]
margin_left = 48.0
margin_right = 92.0
margin_bottom = 40.0
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Eraser" type="ToolButton" parent="Tools/LeftTools"]
margin_left = 96.0
margin_right = 140.0
margin_bottom = 40.0
icon = ExtResource( 1 )

[node name="BucketFill" type="ToolButton" parent="Tools/LeftTools"]
margin_left = 144.0
margin_right = 188.0
margin_bottom = 40.0
icon = ExtResource( 6 )

[node name="RightTools" type="HBoxContainer" parent="Tools"]
margin_left = 200.0
margin_right = 1024.0
margin_bottom = 40.0
alignment = 2

[node name="Grid" type="ToolButton" parent="Tools/RightTools"]
margin_left = 780.0
margin_right = 824.0
margin_bottom = 40.0
icon = ExtResource( 4 )

[node name="TilesScroller" type="ScrollContainer" parent="."]
margin_top = 52.0
margin_right = 1024.0
margin_bottom = 600.0
scroll_horizontal_enabled = false

[node name="TilesGrid" type="GridContainer" parent="TilesScroller"]
columns = 4
